--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <main>
+        <section class="container">
+            <div class="grid"></div>
+        </section>
+    </main>
 
     <script src="./script.js"></script>
 </body>
