implementazione html di tools, select->difficulty, main-grid + cambi su css di layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 <body>
     <main>
         <section class="container">
-            <div class="grid"></div>
+            <div class="tools">
+                <h1>Griglia campo minato</h1>
+                <button id="start-button">Push me</button>
+            </div>
+            
+            <select name="select-difficulty" id="select-difficulty">
+                <option value="0">Easy</option>
+                <option value="1">Medium</option>
+                <option value="2">Souls-like</option>
+            </select>
+
+            <div class="main-grid">
+            </div>
         </section>
     </main>
 
